# shopfa-backend-django

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
home/: urls.py
home/templates/home/: home.html
templates/: 404.html  base.html
templates/inc/: messages.html  navbar.html
